# ChatBot_UQAC

./: .env.example  .gitignore  CONTRIBUTING.md  DOCS.md  README.md  pyproject.toml  requirements.txt
examples/: demo_memory_system.py
src/: config.py
src/chatbot_uqac/: __init__.py  cli.py  compat.py  config.py  logging_config.py  streamlit_app.py  style.css
src/chatbot_uqac/ingest/: __main__.py  crawler.py  loaders.py  runner.py  store.py
src/chatbot_uqac/rag/: engine.py  lexical_retrieval.py  retrieval.py  routing.py  vectorstore.py
src/database/: __init__.py
src/rag/: __init__.py
src/scraper/: __init__.py
tests/: conftest.py  test_compat_and_logging.py  test_ingest_crawler.py  test_ingest_loaders.py  test_ingest_store.py  test_memory_system.py  test_rag_engine.py  test_rag_memory.py  test_rag_routing.py  test_vectorstore.py
