[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "chatbot-uqac"
version = "0.1.0"
description = "Local RAG chatbot for the UQAC management guide."
readme = "README.md"
requires-python = ">=3.10,<3.14"

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
]

[tool.setuptools.packages.find]
where = ["src"]
